--- a/app/views/admin/questions/new.html.erb
+++ b/app/views/admin/questions/new.html.erb
@@ -22,16 +22,27 @@
     </div>
 
     <h5>Options</h5>
+    <div id="error_explanation">
+      <% @question.errors[:options_count].each do |error| %>
+        <h6><%=error%></h6>
+      <% end %>
+    </div>
     <%= link_to "#", class: "waves-effect waves-light btn teal small", id: "add_option", onclick: 'addInputBox("")' do %>
       Add Option<i class="material-icons left">add</i>
     <% end %>
 
-    <h6 id="options_prompt">Click on 'ADD OPTION' to add choices for multiple-choice (closed) questions below</h6>
+    <h6>Click on 'ADD OPTION' to add choices for multiple-choice (closed) questions below</h6>
+    <h6>If there are no options, then the question is open</h6>
 
     <div id="question_options" class="row">
 
       <% @question.options.each_with_index do |option, index| %>
         <div class="input-field row" id="question_option_<%=index%>">
+          <div id="error_explanation">
+            <% if @question.errors[:options_empty].include?("option #{index}") %>
+              <h6>Fill this option or remove it</h6>
+            <% end %>
+          </div>
           <%= text_field_tag "question[options][]", option, class: "col s11 m11 l11" %>
           <a class='waves-effect waves-light btn-floating btn-small red' onclick='removeInputBox("question_option_<%=index%>")'>
             <i class='material-icons left'>cancel</i>
@@ -52,10 +63,20 @@
         <%= f.check_box :can_select_multiple %>
         <%= f.label :can_select_multiple, "Enable Multiple Selections" %>
       </div>
+      <div id="error_explanation">
+        <% @question.errors[:multiple].each do |error| %>
+          <h6><%=error%></h6>
+        <% end %>
+      </div>
 
       <div class="input-field row">
         <%= f.check_box :include_other %>
-        <%= f.label :include_other, "Include Open Write-In Option" %>
+        <%= f.label :include_other, "Enable Write-In Option (Other)" %>
+      </div>
+      <div id="error_explanation">
+        <% @question.errors[:other].each do |error| %>
+          <h6><%=error%></h6>
+        <% end %>
       </div>
 
     <%= f.submit "Save", class: "btn view-btn teal row center-align" %>
