ft(views): enable cancel new and edit question process

--- a/app/views/admin/questions/new.html.erb
+++ b/app/views/admin/questions/new.html.erb
@@ -79,6 +79,9 @@
         <% end %>
       </div>
 
-    <%= f.submit "Save", class: "btn view-btn teal row center-align" %>
+      <div class="row">
+        <%= f.submit "Save", class: "btn view-btn teal" %>
+        <%= link_to "Cancel", admin_questions_path, class: "btn view-btn red" %>
+      </div>
   <% end %>
 </div>
