--- a/app/views/partials/_sidebar_dashboard.html.erb
+++ b/app/views/partials/_sidebar_dashboard.html.erb
@@ -12,7 +12,7 @@
   <%= link_to "Certify Artisans", certify_artisans_admin_ratings_path %>
 </li>
 
-<li class='side-nav-button  <%= set_active_class(admin_questions_path) %><%= set_active_class(new_admin_question_path) %>'>
+<li class='side-nav-button  <%= set_active_class(admin_questions_path) %><%= set_active_class(new_admin_question_path) %><%= set_active_class(preview_admin_questions_path) %>'>
   <%= link_to "Manage Questions", admin_questions_path %>
 </li>
 
